tests/error/errors_on_usage/if_expr_not_defined.err
Error: Variable not defined (at $FILE:7:11)
  | 
5 | def foo(x: bool) -> int:
6 |     (y := 1) if x else 0
7 |     return y
  |            ^ `y` might be undefined ...
  | 
6 |     (y := 1) if x else 0
  |                 - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
